<resources>
    <string name="app_name">Polar PPI Recording</string>
    <string name="start_hr_stream">Start Hr Stream</string>
    <string name="stop_hr_stream">Stop Hr Stream</string>
    <string name="start_ecg_stream">Start ECG Stream</string>
    <string name="stop_ecg_stream">Stop ECG Stream</string>
    <string name="start_acc_stream">Start ACC Stream</string>
    <string name="stop_acc_stream">Stop ACC Stream</string>
    <string name="start_gyro_stream">Start GYRO Stream</string>
    <string name="stop_gyro_stream">Stop GYRO Stream</string>
    <string name="start_mag_stream">Start Magnetometer Stream</string>
    <string name="stop_mag_stream">Stop Magnetometer Stream</string>
    <string name="start_ppg_stream">Start PPG Stream</string>
    <string name="stop_ppg_stream">Stop PPG Stream</string>
    <string name="start_ppi_stream">Start PPI Stream</string>
    <string name="stop_ppi_stream">Stop PPI Stream</string>
    <string name="enable_sdk_mode">Enable SDK mode</string>
    <string name="disable_sdk_mode">Disable SDK mode</string>
    <string name="listen_broadcast">Listen broadcast</string>
    <string name="listening_broadcast">Listening broadcast</string>
    <string name="connect_to_device">Connect to %s</string>
    <string name="disconnect_from_device">Disconnect from %s</string>
    <string name="auto_connect_toggle">Auto connect</string>
    <string name="scan_devices">scan devices</string>
    <string name="scanning_devices">stop device scan</string>
    <string name="list_exercises">list exercises</string>
    <string name="read_exercise">read exercise</string>
    <string name="reading_exercise">reading exercise</string>
    <string name="remove_exercise">remove exercise</string>
    <string name="start_h10_recording">Start H10 recording</string>
    <string name="stop_h10_recording">Stop H10 recording</string>
    <string name="h10_recording_status">H10 recording status</string>
    <string name="set_time">Set time</string>
    <string name="get_time">Get time</string>
    <string name="sampling_rate">Sampling rate</string>
    <string name="resolution">Resolution</string>
    <string name="range">Range</string>
    <string name="channels">Channels</string>
    <string name="ok">OK</string>
    <string name="list_recordings">list verity sense recordings</string>
    <string name="status_recordings">recording status</string>
    <string name="start_recording">start verity sense PPI recording</string>
    <string name="stop_recording">stop verity sense PPI recording</string>
    <string name="download_recording">download last verity sense recording</string>
    <string name="delete_recording">delete last verity sense recording</string>
    <string name="get_disk_space">Get disk space</string>
    <string name="enable_sdk_mode_led_animation">Enable SDK mode led animation</string>
    <string name="disable_sdk_mode_led_animation">Disable SDK mode led animation</string>
    <string name="enable_ppi_mode_led_animation">Enable PPI mode led animation</string>
    <string name="disable_ppi_mode_led_animation">Disable PPI mode led animation</string>
    <string name="do_factory_reset">Do factory reset</string>
    <string name="polar_device_id">Enter polar device Id</string>
</resources>
